# BlameFree

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mcp_servers.toml  run_ci.sh
crates/crb-agents/: Cargo.toml  README.md
crates/crb-agents/src/: agent.rs  lib.rs  manifest.rs  prompts.rs  submit_finding.rs  templates.rs
crates/crb-agents/src/prompts/: gen.rs
crates/crb-aggregator/: Cargo.toml  README.md
crates/crb-aggregator/src/: lib.rs  main.rs
crates/crb-auditor/: Cargo.toml  README.md
crates/crb-auditor/src/: deflation.rs  inflation.rs  lib.rs  main.rs
crates/crb-benchmark/: Cargo.toml  README.md
crates/crb-benchmark/src/: diff_cache.rs  diffs.rs  harness_integration.rs  judge.rs  lib.rs  main.rs  pr.rs  scaffold.rs  validate.rs
crates/crb-benchmark/tests/: diff_tests.rs  scaffold_tests.rs
crates/crb-cache/: Cargo.toml
crates/crb-cache/src/: ext.rs  filesystem.rs  lib.rs  paths.rs  sha256.rs  traits.rs  types.rs
crates/crb-cache/src/snapshots/: crb_cache__types__tests__cache_entry_serialization.snap
crates/crb-consensus/: Cargo.toml  README.md
crates/crb-consensus/src/: adaptive.rs  agent.rs  execution.rs  harness.rs  judge.rs  lib.rs  pipeline.rs
crates/crb-consensus/src/snapshots/: crb_consensus__tests__match_result_json_serialization-2.snap  crb_consensus__tests__match_result_json_serialization-3.snap  crb_consensus__tests__match_result_json_serialization.snap
crates/crb-dashboard/: Cargo.toml  README.md
crates/crb-dashboard/src/: lib.rs  render.rs
crates/crb-harness/: Cargo.toml  README.md
crates/crb-harness/src/: cache.rs  config.rs  cost.rs  diff.rs  eval.rs  exp13.rs  filter.rs  finding.rs  history.rs  lib.rs  main.rs  model_capabilities.rs  paths.rs  pipeline.rs  review.rs  runner.rs  test_utils.rs  validation.rs
crates/crb-harness/tests/: debug_test.rs  lib_tests.rs  parser_tests.rs  preprocess_diff_tests.rs  review_tests.rs  url_tests.rs
crates/crb-macros/: Cargo.toml
crates/crb-macros/src/: lib.rs
crates/crb-macros/tests/: trybuild.rs
crates/crb-macros/tests/fixtures/: 01-basic-struct.rs  02-cache-key-struct.rs  03-cache-ref-struct.rs  04-enum-fails.rs  04-enum-fails.stderr  05-tuple-struct-fails.rs  05-tuple-struct-fails.stderr
crates/crb-reporting/: Cargo.toml  README.md
crates/crb-reporting/src/: cost.rs  golden.rs  history.rs  lib.rs  metrics.rs
crates/crb-reporting/src/snapshots/: crb_reporting__golden__tests__golden_comment_entry_serialization.snap  crb_reporting__history__tests__run_history_entry_serialization.snap  crb_reporting__tests__pr_result_empty_verdicts.snap  crb_reporting__tests__pr_result_serialization_roundtrip.snap
crates/crb-reporting/tests/: write_report_integration.rs
crates/crb-rules/: Cargo.toml  README.md
crates/crb-rules/src/: lib.rs  matcher.rs  parser.rs  preamble.rs
crates/crb-shared/: Cargo.toml
crates/crb-shared/src/: benchmark.rs  benchmark_pipeline.rs  deduplicate.rs  diff.rs  filter.rs  finding.rs  fs.rs  jaccard.rs  lib.rs  metrics.rs  pattern.rs  severity.rs  url.rs
crates/crb-shared/src/cache/: filesystem.rs  instance.rs  keys.rs  mod.rs  paths.rs  sha256.rs  traits.rs  types.rs
crates/crb-shared/tests/fixtures/: diff_git_index.diff  hunk_header_text.diff  mixed_real_and_generated.diff  multiple_categories.diff  node_modules.diff  only_src_lib.diff  pnpm_lock.diff  three_line_context.diff
crates/crb-tools/: Cargo.toml  README.md  linters.toml
crates/crb-tools/src/: budget.rs  context.rs  error.rs  git.rs  grep.rs  language_detector.rs  lib.rs  list_dir.rs  macros.rs  mcp.rs  mcp_config.rs  read_file.rs  shell.rs  submit_finding.rs
crates/crb-tools/src/filesystem/: grep.rs  list_dir.rs  mod.rs  read_file.rs
crates/crb-tools/src/git/: clean.rs  diff.rs  git.rs  mod.rs  runner.rs
crates/crb-tools/src/linters/: config.rs  eslint.rs  govet.rs  mod.rs  ruff.rs  tool.rs
crates/crb-tools/src/mcp/: config.rs  mod.rs  tool.rs
crates/crb-tools/src/snapshots/: crb_tools__error__tests__config_error_displays-2.snap  crb_tools__error__tests__config_error_displays-3.snap  crb_tools__error__tests__config_error_displays.snap  crb_tools__error__tests__error_non_zero_exit_negative_code-2.snap  crb_tools__error__tests__error_non_zero_exit_negative_code-3.snap  crb_tools__error__tests__error_non_zero_exit_negative_code.snap  crb_tools__error__tests__git_error_displays-2.snap  crb_tools__error__tests__git_error_displays-3.snap  crb_tools__error__tests__git_error_displays.snap  crb_tools__error__tests__git_error_from_io_error.snap  crb_tools__error__tests__grep_error_displays-2.snap  crb_tools__error__tests__grep_error_displays-3.snap  crb_tools__error__tests__grep_error_displays.snap  crb_tools__error__tests__linter_error_displays-2.snap  crb_tools__error__tests__linter_error_displays-3.snap  crb_tools__error__tests__linter_error_displays-4.snap  crb_tools__error__tests__linter_error_displays.snap  crb_tools__error__tests__linter_error_from_io_error.snap  crb_tools__error__tests__list_dir_error_displays.snap  crb_tools__error__tests__mcp_error_displays-2.snap  crb_tools__error__tests__mcp_error_displays-3.snap  crb_tools__error__tests__mcp_error_displays-4.snap  (+8 more)
crates/crb-types/: Cargo.toml
crates/crb-types/src/: agent.rs  benchmark.rs  capabilities.rs  cost.rs  errors.rs  lib.rs  review.rs  severity.rs  wrappers.rs
crates/crb-types/src/benchmark/: mod.rs  (+4 more)
crates/crb-webui/: Cargo.toml  README.md  build.rs
crates/crb-webui-backend/: Cargo.toml  build.rs
crates/crb-webui-backend/src/: auth.rs  config.rs  events.rs  harness.rs  main.rs  server.rs  static_assets.rs
crates/crb-webui-frontend/: Cargo.toml  index.html
crates/crb-webui-frontend/css/: layout.css  reset.css  styles.css  tokens.css
crates/crb-webui-frontend/src/: app.rs  lib.rs  sse.rs
crates/crb-webui-shared/: Cargo.toml
crates/crb-webui-shared/src/: adhoc.rs  admin.rs  auth.rs  config.rs  lib.rs  routes.rs  runs.rs
crates/crb-webui/frontend/: Cargo.toml  README.md  index.html
crates/crb-webui/src/: auth.rs  config.rs  converter.rs  events.rs  harness.rs  main.rs  server.rs  static_assets.rs
(+484 files in other folders)
