[workspace]
resolver = "2"
members = ["crates/*", "crates/crb-webui/frontend"]

[workspace.dependencies]
rig-core = "0.39"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"
schemars = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
csv = "1.3"
regex = "1"
once_cell = "1"
dotenvy = "0.15"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
