[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.lints.rust]
absolute-paths-not-starting-with-crate = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "deny"
unsafe_code = "deny"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
variant-size-differences = "warn"

[workspace.lints.clippy]
cast_lossless = "deny"
clone_on_ref_ptr = "deny"
cognitive_complexity = "warn"
expect_used = "deny"
large_enum_variant = "deny"
match_same_arms = "deny"
panic = "deny"
print_stdout = "deny"
redundant_closure = "deny"
todo = "deny"
too_many_arguments = "warn"
too_many_lines = "warn"
unimplemented = "deny"
unwrap_used = "deny"
wildcard_imports = "deny"


[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
console_error_panic_hook = "0.1"
console_log = "1"
csv = "1.3"
dotenvy = "0.15"
dunce = "1.0"
futures = "0.3"
glob = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"
handlebars = "5"
hmac = "0.12"
include_dir = "0.7"
js-sys = "0.3"
leptos = "0.6"
leptos_meta = "0.6"
leptos_router = "0.6"
log = "0.4"
oauth2 = { version = "4", features = ["reqwest"] }
octocrab = "0.41"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rig-compose = "0.5.0"
rig-core = "0.39"
rig-mcp = "0.2.5"
rust-embed = "8"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_fields = "0.1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
strum = { version = "0.28", features = ["derive"] }
syn = "2"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
toml = "0.8"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
