[package]
name = "crb-agents"
version = "0.1.0"
edition = "2021"

[features]
exp14_submit_finding = []

[dependencies]
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
serde_fields = { workspace = true }
handlebars = "5"
tracing = { workspace = true }
crb-tools = { path = "../crb-tools" }
include_dir = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
