[package]
name = "crb-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
exp14_submit_finding = []

[dependencies]
anyhow = { workspace = true }
crb-types = { path = "../crb-types" }
handlebars = { workspace = true }
include_dir = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true }
serde_fields = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
