[package]
name = "crb-aggregator"
version = "0.1.0"
edition = "2021"

[lib]
name = "crb_aggregator"
path = "src/lib.rs"

[[bin]]
name = "crb-aggregator"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
crb-agents = { path = "../crb-agents" }
