[package]
name = "crb-auditor"
version = "0.1.0"
edition = "2021"

[lib]
name = "crb_auditor"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
crb-tools = { path = "../crb-tools" }
crb-shared = { path = "../crb-shared" }

[lints]
workspace = true
