[package]
name = "crb-auditor"
version.workspace = true
edition.workspace = true

[lib]
name = "crb_auditor"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
crb-agents = { path = "../crb-agents" }
crb-tools = { path = "../crb-tools" }
crb-shared = { path = "../crb-shared" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
