[package]
name = "crb-benchmark"
autolib = false
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crb-benchmark"
path = "src/main.rs"

[lib]
name = "crb_benchmark"
path = "src/lib.rs"

[features]
reduce-diff = ["crb-harness/reduce-diff"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crb-agents = { path = "../crb-agents" }
crb-types = { path = "../crb-types" }
crb-harness = { path = "../crb-harness" }
crb-judge = { path = "../crb-judge" }
crb-reporting = { path = "../crb-reporting" }
crb-rules = { path = "../crb-rules" }
crb-shared = { path = "../crb-shared" }
crb-tools = { path = "../crb-tools" }
dotenvy = { workspace = true }
regex = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
