[package]
name = "crb-benchmark"
autolib = false
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crb-benchmark"
path = "src/main.rs"
required-features = ["binary"]

[lib]
name = "crb_benchmark"
path = "src/lib.rs"

[features]
binary = ["crb-rules", "serde", "strum", "tokio"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crb-agents = { path = "../crb-agents" }
crb-types = { path = "../crb-types" }
crb-harness = { path = "../crb-harness" }
crb-reporting = { path = "../crb-reporting" }
crb-shared = { path = "../crb-shared" }
rig-core = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Binary Dependencies
crb-rules = { path = "../crb-rules", optional = true }
serde = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"], optional = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
