[package]
name = "crb-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crb-macros = { path = "../crb-macros" }
crb-types = { path = "../crb-types" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
