[package]
name = "crb-consensus"
version = "0.1.0"
edition = "2021"

[features]
default = []
exp14_submit_finding = ["crb-agents/exp14_submit_finding"]
exp16_adaptive_agents = []

[dependencies]
crb-agents = { path = "../crb-agents" }
crb-shared = { path = "../crb-shared" }
crb-dashboard = { path = "../crb-dashboard" }
crb-judge = { path = "../crb-judge" }
crb-reporting = { path = "../crb-reporting" }
rig-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
futures = "0.3"

[lints]
workspace = true
