[package]
name = "crb-consensus"
version.workspace = true
edition.workspace = true

[features]
default = []
exp14_submit_finding = ["crb-agents/exp14_submit_finding"]
exp16_adaptive_agents = []

[dependencies]
anyhow = { workspace = true }
crb-agents = { path = "../crb-agents" }
crb-dashboard = { path = "../crb-dashboard" }
crb-judge = { path = "../crb-judge" }
crb-reporting = { path = "../crb-reporting" }
crb-shared = { path = "../crb-shared" }
futures = { workspace = true }
regex = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
