[package]
name = "crb-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
exp14_submit_finding = ["crb-agents/exp14_submit_finding"]
exp16_adaptive_agents = []

[dependencies]
crb-agents = { path = "../crb-agents" }
crb-types = { path = "../crb-types" }
crb-reporting = { path = "../crb-reporting" }
crb-cache = { path = "../crb-cache" }
crb-shared = { path = "../crb-shared" }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
