[package]
name = "crb-dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["events"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
crb-judge = { path = "../crb-judge" }

[lints]
workspace = true

