[package]
name = "crb-harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crb-harness"
path = "src/main.rs"

[features]
default = ["reduce-diff"]
reduce-diff = []
exp14_template_vars = ["crb-tools/exp14_template_vars"]
exp16_adaptive_agents = ["crb-consensus/exp16_adaptive_agents"]

[dependencies]
crb-agents = { path = "../crb-agents" }
crb-judge = { path = "../crb-judge" }
crb-reporting = { path = "../crb-reporting" }
crb-consensus = { path = "../crb-consensus" }
crb-tools = { path = "../crb-tools" }
crb-aggregator = { path = "../crb-aggregator" }
crb-auditor = { path = "../crb-auditor" }
crb-rules = { path = "../crb-rules" }
crb-dashboard = { path = "../crb-dashboard" }
rig-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dotenvy = { workspace = true }
tempfile = "3"
regex = { workspace = true }
sha2 = { workspace = true }
toml = "0.8"
once_cell = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
