[package]
name = "crb-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crb-harness"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = ["reduce-diff"]
binary = ["clap", "dotenvy", "tracing-subscriber"]
reduce-diff = []
exp14_template_vars = ["crb-tools/exp14_template_vars"]
exp16_adaptive_agents = ["crb-consensus/exp16_adaptive_agents"]

[dependencies]
anyhow = { workspace = true }
crb-agents = { path = "../crb-agents" }
crb-auditor = { path = "../crb-auditor" }
crb-cache = { path = "../crb-cache" }
crb-consensus = { path = "../crb-consensus" }
crb-types = { path = "../crb-types" }
crb-judge = { path = "../crb-judge" }
crb-reporting = { path = "../crb-reporting" }
crb-rules = { path = "../crb-rules" }
crb-shared = { path = "../crb-shared" }
crb-tools = { path = "../crb-tools" }
regex = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }

# Binary dependencies
clap = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[lints]
workspace = true
