[package]
name = "crb-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crb-harness"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = []
binary = ["clap", "dotenvy", "tracing-subscriber", "crb-shared/backend"]
exp14_template_vars = ["crb-tools/exp14_template_vars"]
exp16_adaptive_agents = ["crb-consensus/exp16_adaptive_agents"]

[dependencies]
anyhow = { workspace = true }
crb-agents = { path = "../crb-agents" }
crb-auditor = { path = "../crb-auditor" }
crb-cache = { path = "../crb-cache" }
crb-consensus = { path = "../crb-consensus" }
crb-reporting = { path = "../crb-reporting" }
crb-rules = { path = "../crb-rules" }
crb-shared = { path = "../crb-shared" }
crb-tools = { path = "../crb-tools" }
crb-types = { path = "../crb-types" }
reqwest = { workspace = true, features = ["blocking"] }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Binary dependencies
clap = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
