[package]
name = "crb-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
crb-types = { path = "../crb-types" }
crb-cache = { path = "../crb-cache" }
