[package]
name = "crb-reporting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
crb-types = { path = "../crb-types" }
crb-webui-shared = { path = "../crb-webui-shared" }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
mti = { workspace = true, features = ["serde"] }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
