[package]
name = "crb-rules"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
