[package]
name = "crb-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
crb-cache = { path = "../crb-cache" }
crb-types = { path = "../crb-types" }
crb-webui-shared = { path = "../crb-webui-shared" }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
