[package]
name = "crb-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
backend = ["dotenvy", "rig-core", "tracing-subscriber"]

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
crb-cache = { path = "../crb-cache" }
crb-types = { path = "../crb-types" }
tracing = { workspace = true }

# Backend dependencies
dotenvy = { workspace = true, optional = true }
rig-core = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[lints]
workspace = true
