[package]
name = "crb-tools"
version = "0.1.0"
edition = "2021"

[features]
default = []
exp14_template_vars = []

[dependencies]
rig-core = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
toml = "0.8"
dunce = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tempfile = "3"
tracing = { workspace = true }
async-trait = "0.1"
rig-mcp = "0.2.5"
rig-compose = "0.5.0"
sha2 = { workspace = true }
