[package]
name = "crb-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
exp14_template_vars = []
exp14_submit_finding = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
crb-shared = { path = "../crb-shared" }
dunce = { workspace = true }
reqwest = { workspace = true }
rig-compose = { workspace = true }
rig-core = { workspace = true }
rig-mcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
