[package]
name = "crb-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crb-cache = { path = "../crb-cache" }
sha2 = { workspace = true }

[lints]
workspace = true
