[package]
name = "crb-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
schemars = { workspace = true }
mti = { workspace = true, features = ["serde"] }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
