[package]
name = "crb-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
schemars = { workspace = true }
mti = { workspace = true, features = ["serde"] }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
