[package]
name = "crb-webui-frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
crb-shared = { path = "../crb-shared" }
crb-webui-shared = { path = "../crb-webui-shared" }
futures = { workspace = true }
gloo-net = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
js-sys = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_meta = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true, features = ["csr"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["EventSource", "MessageEvent"] }
