[package]
name = "crb-webui-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crb-macros = { path = "../crb-macros" }
crb-types = { path = "../crb-types" }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
mti.workspace = true

[dev-dependencies]
insta = { workspace = true }
