[package]
name = "crb-webui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crb-webui"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "process", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
futures = "0.3"
