[package]
name = "crb-webui-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"
futures = "0.3"
log = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["EventSource"] }
console_log = "1"
console_error_panic_hook = "0.1"
